# First-NHHS-Game

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt  Player.h
libs/SFML/: version.txt
src/: Player.cpp  main.cpp
